--- a/views/articles/edit.ejs
+++ b/views/articles/edit.ejs
@@ -10,10 +10,10 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="mb-4 mt-2">New Article </h1>
+        <h1 class="mb-4 mt-2">Edit Article </h1>
 
-        <form action="/articles/<%= article.id %> ?_method=PUT" method="POST">
-            <%- include('_form_fields') %> 
+        <form action="/articles/<%= article.id %>?_method=PUT" method="POST">
+            <%- include('_form_fields') %>
         </form>
     </div>  <!-- End Container-->
 </body>
